logs/Sequence logs/11-24 AM on Mar 16, 2024.txt
  File "/home/pi/NMHC-Pre-Concentration/pre_con.py", line 894
    help='Run specified sequence continuously.')
    ^
SyntaxError: invalid syntax
